--- a/AVS437/03_parasites.html
+++ b/AVS437/03_parasites.html
@@ -17,9 +17,9 @@ In this module we will survey parasites, which are eukaryotic organisms, other t
 </Blockquote>
 <B>Protozoa</B>
 <Blockquote>
-<A HREF=https://en.wikipedia.org/wiki/Coccidiosis#:~:text=Symptoms%20in%20cats%20include%20fever,are%20usually%20treated%20with%20clindamycin.>Coccidia<BR>
-<A HREF=https://en.wikipedia.org/wiki/Giardia>Giardia</A><BR>
-<A HREF=https://en.wikipedia.org/wiki/Malaria>Malaria - Plasmodium</A><BR>
+<A HREF=https://www.cdc.gov/dpdx/cystoisosporiasis/index.html>Coccidia<BR>
+<A HREF=https://www.cdc.gov/dpdx/giardiasis/index.html>Giardia</A><BR>
+<A HREF=https://www.cdc.gov/dpdx/malaria/index.html>Malaria - Plasmodium</A><BR>
 <A HREF=https://www.cdc.gov/dpdx/sarcocystosis/index.html>Sarcocystis sp</A><BR>
 </blockquote>
 <B>Helminths</B><BR>
